<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registration">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/icon_account_circle"
            android:src="@drawable/icon_account_circle" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
        <TextView
            android:labelFor="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/reg_driving_license"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/reg_driving_license">


            <RadioButton
                android:id="@+id/rbDriving"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:text="@string/reg_driving" />

            <RadioButton
                android:id="@+id/rbWalking"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:text="@string/reg_walking" />
        </RadioGroup>



        <Switch
            android:id="@+id/switchDisplayMode"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:text="@string/dark_mode"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:background="@drawable/rounded_corner"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/back"
            android:background="@drawable/rounded_corner"
            style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

</LinearLayout>


