<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">


        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account_circle"
            android:contentDescription="@string/icon_account_circle"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:autofillHints=""
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"/>

        <Button
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/transparent"/>

</LinearLayout>

